--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "gulp-uglify": "^3.0.2",
     "gulp-util": "^3.0.8",
     "gulp-watch": "^5.0.1",
+    "lodash": "^4.17.20",
     "lodash.template": "^4.5.0"
   }
 }
